SFDC_LD_Packages/objects-layouts/main/default/objects/Retention_Metrics__c/Retention_Metrics__c.object-meta.xml
<CustomObject>
    <label>Retention Metric</label>
    <nameField>
        <label>Retention Record</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Retention Metrics</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>