SFDC_LD_Packages/objects-layouts/main/default/objects/Retention_Metrics__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Retention_Metrics</relationshipName>
    <type>Lookup</type>
</CustomField>