SFDC_LD_Packages/objects-layouts/main/default/objects/Retention_Metrics__c/fields/Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Name__c</fullName>
    <label>Account Name</label>
    <length>75</length>
    <type>Text</type>
</CustomField>