SFDC_LD_Packages/objects-layouts/main/default/objects/Retention_Metrics__c/fields/Actual_Growth__c.field-meta.xml
<CustomField>
    <fullName>Actual_Growth__c</fullName>
    <label>Actual Growth</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>