SFDC_LD_Packages/objects-layouts/main/default/objects/Retention_Metrics__c/fields/Calc_MRR__c.field-meta.xml
<CustomField>
    <fullName>Calc_MRR__c</fullName>
    <label>Calc MRR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>