SFDC_LD_Packages/objects-layouts/main/default/objects/Retention_Metrics__c/fields/Closed_Under_Current_CSM__c.field-meta.xml
<CustomField>
    <fullName>Closed_Under_Current_CSM__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Closed Under Current CSM</label>
    <type>Checkbox</type>
</CustomField>