SFDC_LD_Packages/objects-layouts/main/default/objects/Retention_Metrics__c/fields/CSM__c.field-meta.xml
<CustomField>
    <fullName>CSM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CSM</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Retention_Metrics</relationshipName>
    <type>Lookup</type>
</CustomField>