SFDC_LD_Packages/objects-layouts/main/default/objects/Retention_Metrics__c/fields/Current_CSM__c.field-meta.xml
<CustomField>
    <fullName>Current_CSM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Current CSM</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Retention_Metrics1</relationshipName>
    <type>Lookup</type>
</CustomField>