SFDC_LD_Packages/objects-layouts/main/default/objects/Retention_Metrics__c/fields/Current_Incremental_ARR__c.field-meta.xml
<CustomField>
    <fullName>Current_Incremental_ARR__c</fullName>
    <label>Current Incremental ARR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>