SFDC_LD_Packages/objects-layouts/main/default/objects/Retention_Metrics__c/fields/Days_Owned_by_Current_CSM__c.field-meta.xml
<CustomField>
    <fullName>Days_Owned_by_Current_CSM__c</fullName>
    <label>Days Owned by Current CSM</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>