SFDC_LD_Packages/objects-layouts/main/default/objects/Retention_Metrics__c/fields/Matches_Account_CSM__c.field-meta.xml
<CustomField>
    <fullName>Matches_Account_CSM__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Matches Account CSM</label>
    <type>Checkbox</type>
</CustomField>