SFDC_LD_Packages/objects-layouts/main/default/objects/Retention_Metrics__c/fields/of_Year_Owned_by_CSM__c.field-meta.xml
<CustomField>
    <fullName>of_Year_Owned_by_CSM__c</fullName>
    <label>% of Year Owned by CSM</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>