SFDC_LD_Packages/objects-layouts/main/default/objects/Retention_Metrics__c/fields/Previous_CSM_Assigned__c.field-meta.xml
<CustomField>
    <fullName>Previous_CSM_Assigned__c</fullName>
    <label>Previous CSM Assigned</label>
    <type>Date</type>
</CustomField>