SFDC_LD_Packages/objects-layouts/main/default/objects/Retention_Metrics__c/fields/Recalculated_Starting_ARR__c.field-meta.xml
<CustomField>
    <fullName>Recalculated_Starting_ARR__c</fullName>
    <label>Recalculated Starting ARR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>