SFDC_LD_Packages/objects-layouts/main/default/objects/Retention_Metrics__c/fields/Snapshot_Run_Date__c.field-meta.xml
<CustomField>
    <fullName>Snapshot_Run_Date__c</fullName>
    <label>Snapshot Run Date</label>
    <type>DateTime</type>
</CustomField>