SFDC_LD_Packages/objects-layouts/main/default/objects/Retention_Metrics__c/fields/Starting_ARR_Manual__c.field-meta.xml
<CustomField>
    <fullName>Starting_ARR_Manual__c</fullName>
    <label>Starting ARR (Manual)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>