SFDC_LD_Packages/objects-layouts/main/default/objects/Retention_Metrics__c/fields/Target_Account_Growth__c.field-meta.xml
<CustomField>
    <fullName>Target_Account_Growth__c</fullName>
    <label>Target Account Growth</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>