SFDC_LD_Packages/objects-layouts/main/default/objects/Retention_Metrics__c/fields/Ultimate_Parent__c.field-meta.xml
<CustomField>
    <fullName>Ultimate_Parent__c</fullName>
    <label>Ultimate Parent</label>
    <length>75</length>
    <type>Text</type>
</CustomField>