SFDC_LD_Packages/objects-layouts/main/default/objects/Retention_Metrics__c/fields/Ultimate_Parent_Account__c.field-meta.xml
<CustomField>
    <fullName>Ultimate_Parent_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ultimate Parent Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Retention Metrics (Ultimate Parent Account)</relationshipLabel>
    <relationshipName>Retention_Metrics1</relationshipName>
    <type>Lookup</type>
</CustomField>